nsLocalFile::GetParent() doesn't return nsnull at top of volume. patch by Wladimir Palant. b=332389 r=sayrer r=josh